[gd_scene load_steps=2 format=2]

[ext_resource path="res://physics/ui/trajectory_summary.gd" type="Script" id=1]

[node name="TrajectorySummary" type="Panel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -173.0
margin_right = 186.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TargetLbl" type="RichTextLabel" parent="."]
margin_right = 49.0
margin_bottom = 15.0
bbcode_enabled = true
bbcode_text = "[b]Center:[/b]"
text = "Center:"

[node name="Target" type="Label" parent="."]
margin_left = 105.452
margin_top = 1.66858
margin_right = 145.452
margin_bottom = 15.6686
text = "Sun"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TrajectoryTypeLbl" type="RichTextLabel" parent="."]
margin_top = 16.0
margin_right = 102.0
margin_bottom = 31.0
bbcode_enabled = true
bbcode_text = "[b]Trajectory type:[/b]"
text = "Trajectory type:"

[node name="TrajectoryType" type="Label" parent="."]
margin_left = 105.119
margin_top = 17.6866
margin_right = 145.119
margin_bottom = 31.6866
text = "Sun"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApogeeLbl" type="RichTextLabel" parent="."]
margin_top = 33.0
margin_right = 102.0
margin_bottom = 48.0
bbcode_enabled = true
bbcode_text = "[b]Apogee:[/b]"
text = "Apogee:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Apogee" type="Label" parent="."]
margin_left = 104.786
margin_top = 33.6866
margin_right = 144.786
margin_bottom = 47.6866
text = "Sun"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PerigeeLbl" type="RichTextLabel" parent="."]
margin_top = 50.0
margin_right = 102.0
margin_bottom = 65.0
bbcode_enabled = true
bbcode_text = "[b]Perigee:[/b]"
text = "Perigee:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Perigee" type="Label" parent="."]
margin_left = 105.119
margin_top = 50.6866
margin_right = 145.119
margin_bottom = 64.6866
text = "Sun"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeToPerigeeLbl" type="RichTextLabel" parent="."]
margin_top = 65.0
margin_right = 102.0
margin_bottom = 80.0
bbcode_enabled = true
bbcode_text = "[b]T to perigee:[/b]"
text = "T to perigee:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeToPerigee" type="Label" parent="."]
margin_left = 105.119
margin_top = 65.6866
margin_right = 145.119
margin_bottom = 79.6866
text = "Sun"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeToApogeeLbl" type="RichTextLabel" parent="."]
margin_top = 80.0
margin_right = 102.0
margin_bottom = 95.0
bbcode_enabled = true
bbcode_text = "[b]T to apogee:[/b]"
text = "T to apogee:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeToApogee" type="Label" parent="."]
margin_left = 105.119
margin_top = 80.6866
margin_right = 145.119
margin_bottom = 94.6866
text = "Sun"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VApogeeLbl" type="RichTextLabel" parent="."]
margin_top = 95.0
margin_right = 102.0
margin_bottom = 110.0
bbcode_enabled = true
bbcode_text = "[b]V apogee:[/b]"
text = "V apogee:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VApogee" type="Label" parent="."]
margin_left = 105.119
margin_top = 95.6866
margin_right = 145.119
margin_bottom = 109.687
text = "Sun"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VPerigeeLbl" type="RichTextLabel" parent="."]
margin_left = 0.749153
margin_top = 110.0
margin_right = 102.749
margin_bottom = 125.0
bbcode_enabled = true
bbcode_text = "[b]V perigee:[/b]"
text = "V perigee:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VPerigee" type="Label" parent="."]
margin_left = 105.119
margin_top = 110.687
margin_right = 145.119
margin_bottom = 124.687
text = "Sun"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PeriodLbl" type="RichTextLabel" parent="."]
margin_top = 124.0
margin_right = 102.0
margin_bottom = 139.0
bbcode_enabled = true
bbcode_text = "[b]Period:[/b]"
text = "Period:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Period" type="Label" parent="."]
margin_left = 105.119
margin_top = 124.687
margin_right = 145.119
margin_bottom = 138.687
text = "Sun"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VelocityLbl" type="RichTextLabel" parent="."]
margin_top = 138.0
margin_right = 102.0
margin_bottom = 153.0
bbcode_enabled = true
bbcode_text = "[b]Velocity:[/b]"
text = "Velocity:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Velocity" type="Label" parent="."]
margin_left = 105.119
margin_top = 138.687
margin_right = 145.119
margin_bottom = 152.687
text = "Sun"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DistanceLbl" type="RichTextLabel" parent="."]
margin_left = 1.00113
margin_top = 152.683
margin_right = 103.001
margin_bottom = 167.683
bbcode_enabled = true
bbcode_text = "[b]Distance:[/b]"
text = "Distance:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Distance" type="Label" parent="."]
margin_left = 106.12
margin_top = 153.37
margin_right = 146.12
margin_bottom = 167.37
text = "Sun"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
